Switch to jekyll-nows plugin for post management

--- a/_nows/2015-03-23.md
+++ b/_nows/2015-03-23.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+date: 2015-03-23
 ---
 
 I am a recent history Ph.D. and [web developer](http://foamgarden.com) living in Columbus, OH.
