--- a/_nows/2015-03-24.md
+++ b/_nows/2015-03-24.md
@@ -1,9 +1,9 @@
 ---
-layout: post
+date: 2015-03-24
 ---
 
 I am a recent [history Ph.D.](http://tinaja.computer/2014/10/28/abstract-making-the-ocean.html) and [web developer](http://foamgarden.com) living in Columbus, OH.
 
 I am a co-founder and publisher of the digital history journal, [_The Appendix_](http://theappendix.net).
 
-I write and take notes at [La Tinaja](http://tinaja.computer).
+I blog at [La Tinaja](http://tinaja.computer).
