--- a/_nows/2015-04-06.md
+++ b/_nows/2015-04-06.md
@@ -1,9 +1,11 @@
 ---
-layout: post
+date: 2015-04-06
 ---
 
 I am a recent [history Ph.D.](http://tinaja.computer/2014/10/28/abstract-making-the-ocean.html) and [web developer](http://foamgarden.com) living in Columbus, OH.
 
 I am a co-founder and publisher of the digital history journal, [_The Appendix_](http://theappendix.net).
 
-I blog at [La Tinaja](http://tinaja.computer).
+I am [a new father](https://twitter.com/jonesbp/status/585199145155219457).
+
+I write and take notes at [La Tinaja](http://tinaja.computer).
